Add viettel info

--- a/index.html
+++ b/index.html
@@ -3,8 +3,150 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Đăng kí 3G mạng di động Viettel, Mobi, Vina</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+
+	<style>
+		h1 {
+			margin-top: 30px;	
+		}
+	</style>
 </head>
 <body>
+
+	<div class="container-fluid">
+		<h1 class="text-center">
+			Đăng kí 3G
+		</h1>
+		<hr/>
+
+		<!-- Nav tabs -->
+		<ul class="nav nav-tabs" role="tablist">
+		  <li class="nav-item">
+		    <a class="nav-link active" data-toggle="tab" href="#viettel" role="tab">Viettel</a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link" data-toggle="tab" href="#mobiphone" role="tab">Mobiphone</a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link" data-toggle="tab" href="#vinaphone" role="tab">Vinaphone</a>
+		  </li>
 	
+		</ul>
+
+		<!-- Tab panes -->
+		<div class="tab-content">
+		  <div class="tab-pane active" id="viettel" role="tabpanel">
+		  	<h5 class="text-center mt-3 mb-3">Tên gói gửi 191</h5>
+			<p class="mt-4"><em>Trọn gói, không tính phát sinh</em></p>
+		  	<table class="table ">
+			  <thead class="thead-inverse">
+			    <tr>
+			      <th>Tên gói</th>
+			      <th>Giá</th>
+			      <th>MB</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr>
+			      <td>Mimax</td>
+			      <td>70K</td>
+			      <td>600MB</td>
+			    </tr>
+			    <tr>
+			      <td>Mimax90</td>
+			      <td>90K</td>
+			      <td>1,2GB</td>
+			    </tr>
+			    <tr>
+			      <td>Dmax</td>
+			      <td>120K</td>
+			      <td>1,5GB</td>
+			    </tr>
+			    <tr>
+			      <td>Dmax200</td>
+			      <td>200K</td>
+			      <td>3GB</td>
+			    </tr>
+			    <tr>
+			      <td>Mimax500</td>
+			      <td>500K</td>
+			      <td>15GB</td>
+			    </tr>
+			  </tbody>
+			</table>
+
+			<p class="mt-4"><em>Tính phát sinh ngoài gói 25đ/kb - 25000đ/mb</em></p>
+				<table class="table ">
+				  <thead class="thead-inverse">
+				    <tr>
+				      <th>Tên gói</th>
+				      <th>Giá</th>
+				      <th>MB</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <td>Mi10</td>
+				      <td>10K</td>
+				      <td>50MB</td>
+				    </tr>
+				    <tr>
+				      <td>Mi30</td>
+				      <td>30K</td>
+				      <td>200MB</td>
+				    </tr>
+				    <tr>
+				      <td>Mi50</td>
+				      <td>50K</td>
+				      <td>450MB</td>
+				    </tr>
+				    
+				  </tbody>
+				</table>
+
+				<p class="mt-4"><em>Mimax mới, dùng nhiều tháng.Dừng truy cập khi hết lưu lượng</em></p>
+				<table class="table ">
+				  <thead class="thead-inverse">
+				    <tr>
+				      <th>Tên gói</th>
+				      <th>Giá</th>
+				      <th>MB</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <td>Mimax1.5</td>
+				      <td>70K</td>
+				      <td>1.5GB</td>
+				    </tr>
+				    <tr>
+				      <td>Mimax3T</td>
+				      <td>210K</td>
+				      <td>6GB / 3 tháng</td>
+				    </tr>
+				    <tr>
+				      <td>Mimax6T</td>
+				      <td>420K</td>
+				      <td>15GB / 6 tháng</td>
+				    </tr>
+				    <tr>
+				      <td>Mimax12T</td>
+				      <td>840K</td>
+				      <td>36GB / 12 tháng</td>
+				    </tr>				    
+				  </tbody>
+				</table>
+		  </div>
+		  <div class="tab-pane" id="mobiphone" role="tabpanel">...</div>
+		  <div class="tab-pane" id="vinaphone" role="tabpanel">...</div>
+		</div>
+
+		
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
