--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
 		<!-- Tab panes -->
 		<div class="tab-content">
 		  <div class="tab-pane active" id="viettel" role="tabpanel">
-		  	<h5 class="text-center mt-3 mb-3">Tên gói gửi 191</h5>
+		  	
+			<p class="mt-4">Đăng kí: tên gói gửi 191 (Vd: Mimax gửi 191)</p>
+			<p>Hủy: HUY gửi 191</p>
+
+			
+
 			<p class="mt-4"><em>Trọn gói, không tính phát sinh</em></p>
-		  	<table class="table ">
+		  	<table class="table table-striped">
 			  <thead class="thead-inverse">
 			    <tr>
 			      <th>Tên gói</th>
@@ -76,8 +81,8 @@
 			  </tbody>
 			</table>
 
-			<p class="mt-4"><em>Tính phát sinh ngoài gói 25đ/kb - 25000đ/mb</em></p>
-				<table class="table ">
+			<p class="mt-4"><em>Tính phát sinh ngoài gói 25đ/50kb - 500đ/mb</em></p>
+				<table class="table table-striped">
 				  <thead class="thead-inverse">
 				    <tr>
 				      <th>Tên gói</th>
@@ -105,8 +110,8 @@
 				  </tbody>
 				</table>
 
-				<p class="mt-4"><em>Mimax mới, dùng nhiều tháng.Dừng truy cập khi hết lưu lượng</em></p>
-				<table class="table ">
+				<p class="mt-4"><em>Mimax mới, dùng nhiều tháng. Dừng truy cập khi hết lưu lượng</em></p>
+				<table class="table table-striped">
 				  <thead class="thead-inverse">
 				    <tr>
 				      <th>Tên gói</th>
