change active link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		h1 {
 			margin-top: 30px;	
 		}
+		td {
+			width: 30%;
+		}
 	</style>
 </head>
 <body>
@@ -24,20 +27,20 @@
 		<!-- Nav tabs -->
 		<ul class="nav nav-tabs" role="tablist">
 		  <li class="nav-item">
-		    <a class="nav-link" data-toggle="tab" href="#viettel" role="tab">Viettel</a>
+		    <a class="nav-link active" data-toggle="tab" href="#viettel" role="tab">Viettel</a>
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link " data-toggle="tab" href="#mobiphone" role="tab">Mobiphone</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link active" data-toggle="tab" href="#vinaphone" role="tab">Vinaphone</a>
+		    <a class="nav-link" data-toggle="tab" href="#vinaphone" role="tab">Vinaphone</a>
 		  </li>
 	
 		</ul>
 
 		<!-- Tab panes -->
 		<div class="tab-content">
-		  <div class="tab-pane " id="viettel" role="tabpanel">
+		  <div class="tab-pane active" id="viettel" role="tabpanel">
 		  	
 			<p class="mt-4">Đăng kí: tên gói gửi 191 (Vd: Mimax gửi 191)</p>
 			<p>Hủy: HUY gửi 191</p>
@@ -143,7 +146,7 @@
 				</table>
 		  </div>
 		  <div class="tab-pane" id="mobiphone" role="tabpanel"></div>
-		  <div class="tab-pane active" id="vinaphone" role="tabpanel">
+		  <div class="tab-pane" id="vinaphone" role="tabpanel">
 		  	
 		  	<p class="mt-4">Đăng kí: DK4 + tên gói gửi 8069 </p>
 		  	<p>Ví dụ: <strong>DK4 MAX gửi 8069</strong></p>
